--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
+    "resend": "^4.0.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
